[package]
name = "bevy_retrograde_physics"
version = "0.4.0"
authors = ["Katharos Technology LLC."]
edition = "2021"

license-file = "../../LICENSE.md"
readme = "../../README.md"
description = "Physics utilities for Bevy Retrograde"
repository = "https://github.com/katharostech/bevy_retrograde"
documentation = "https://docs.rs/bevy_retrograde_physics"
keywords = ["bevy", "gamedev", "2D", "bevy_retrograde", "pixel-perfect"]
categories = [
    "game-engines",
    "multimedia",
    "rendering::engine",
    "wasm"
]

[features]
default = ["simd-stable"]
debug = ["bevy_rapier2d/debug-render-2d"]
simd-stable = ["bevy_rapier2d/simd-stable"]
simd-nightly = ["bevy_rapier2d/simd-nightly"]

[dependencies]
bevy = { version = "0.10", default-features = false }
bevy_rapier2d = { version = "0.21.0" }
density-mesh-core = "1.5.0"
density-mesh-image = "1.5.0"
image = "0.24.6"